# unified-montrg-api

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  database.py  logging.py
app/models/: __init__.py  banbury_anomaly_detection.py  bas_location.py  base.py  chiller_status.py  economin_lifespan.py  ip_rollgap.py  ipi_quality_temperature.py  machine_grade.py  mart_downtime_by_line.py  mart_downtime_by_machine.py  mart_productivity_by_ip_machine.py  mart_productivity_by_ip_zone.py  mart_productivity_by_op_cd.py  mart_productivity_by_op_group.py  mart_productivity_by_ph_machine.py  mart_productivity_by_ph_zone.py  mart_realtime_productivity_ip_machine.py  (+9 more)
docker/: Dockerfile
k8s/: configmap.yaml  deployment.yaml  ingress-controller-daemonset.yaml  ingress-controller-service-patch.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: deploy.sh  get_dashboard_token.sh  setup-ingress.sh
tests/: __init__.py  conftest.py  test_banb_data.py  test_banbury_anomaly_detection.py  test_chiller_status.py  test_ctm_data.py  test_downtime.py  test_health.py  test_ip_data.py  test_ip_rollgap.py  test_ipi_quality_temperature.py  test_machine_grade.py  test_mc_master.py  test_mttr_mtbf.py  test_oracle_connection.py  test_productivity.py  test_spare_part_inventory.py  test_wo_analysis.py
(+66 files in other folders)
